# qt_project_hse

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  aboutdialog.cpp  aboutdialog.ui  aboutwindow.cpp  aboutwindow.h  aboutwindow.ui  car.cpp  car.h  database.cpp  database.h  datapath.cpp  datapath.h  datapath.ui  guidelinedialog.cpp  guidelinedialog.h  guidelinedialog.ui  helpdialog.h  loginwindow.cpp  loginwindow.h  loginwindow.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  offerslist.cpp  offerslist.h  offersmodel.cpp  offersmodel.h  offerwindow.cpp  offerwindow.h  offerwindow.ui  profile.cpp  profile.h  profilewindow.cpp  profilewindow.h  profilewindow.ui  (+3 more)
data/: car_data.csv
resources/: planet.icns
